example3/apache2_deployment_definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    author: richa
spec:
  replicas: 3
  selector:
    matchLabels:
      name: apache
  template:
    metadata:
      name: apache
      labels:
        name: apache
        author: richa
    spec:
      containers:
        - name: apache
          image: ubuntu/apache2
