example3/nginx_service_definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  labels:
    name: apache
    author: richa
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    name: apache
