example3/ingress_definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-rule
  namespace: default 
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend: 
              service:
                name: nginx-service
                port:
                  number: 80
            path: /nginx
            pathType: Prefix
          - backend:
              service: 
                name: apache-service
                port:
                  number: 80
            path: /apache
            pathType: Prefix
